tests/compile_fail/invalid_grid_track_line_names_empty.rs
use surgeist_style::GridTrackComponent;

fn main() {
    let _names = GridTrackComponent::LineNames(vec![String::new()]);
}
