tests/compile_fail/invalid_grid_track_line_names_empty.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_grid_track_line_names_empty.rs:4:48
  |
4 |     let _names = GridTrackComponent::LineNames(vec![String::new()]);
  |                  ----------------------------- ^^^^^^^^^^^^^^^^^^^ expected `GridLineNameSet`, found `Vec<String>`
  |                  |
  |                  arguments to this enum variant are incorrect
  |
  = note: expected struct `surgeist_style::value::GridLineNameSet`
             found struct `Vec<String>`
note: tuple variant defined here
 --> src/value.rs
  |
  |     LineNames(GridLineNameSet),
  |     ^^^^^^^^^
